Add updated "Full_Disclosure" vignette

--- a/Vignettes/Full_Disclosure.qmd
+++ b/Vignettes/Full_Disclosure.qmd
@@ -44,295 +44,6 @@ library(car)
 library(nlme)
 ```
 
-## Get the functions required for this vignette - replace with package download when available
-
-We've customized some functions for this workflow so let's make sure we have those.
-
-```{r}
-#| label: get-functions
-#| include: true
-
-#Create function to make line from each pair of coordinates
-make_line <- function(start_x, start_y, end_x, end_y) {
-  sf::st_linestring(matrix(c(start_x, end_x, start_y, end_y), 2, 2))
-}
-
-grid_res <- function(km, study_site, epsg, what) {
-  
-  grid_spacing <- km * 1000 # Desired kilometers times 1000 m per 1 km
-  
-  ifelse(what == "polygons", {
-  
-  grid <- sf::st_make_grid(study_site, square = T, what = what, cellsize = c(grid_spacing, grid_spacing)) %>% # Create a grid inside the coastal 500 m isobath polygon
-    sf::st_as_sf() %>%
-    mutate(gid = seq_along(x)) %>%
-    sf::st_make_valid() %>%
-    sf::st_transform(epsg) %>%
-    sf::st_cast('MULTIPOLYGON') 
-  
-  grid <- sf::st_intersection(study_site %>% sf::st_transform(epsg), grid) %>%
-    sf::st_as_sf() %>%
-    mutate(gid = seq_along(geometry)) %>%
-    sf::st_make_valid() %>%
-    sf::st_transform(epsg) %>%
-    sf::st_cast('MULTIPOLYGON')
-  
-  return(grid)
-  }, ifelse(what == "centers", 
-  {
-    grid <- sf::st_make_grid(study_site, square = T, what = what, cellsize = c(grid_spacing, grid_spacing)) %>% # Create a grid inside the coastal 500 m isobath polygon
-      sf::st_as_sf() %>%
-      mutate(gid = seq_along(x)) %>%
-      sf::st_make_valid() %>%
-      sf::st_transform(epsg) %>%
-      sf::st_cast('POINT') 
-    
-    return(grid)
-  }, 
-  print("Error: Not a valid argument for parameter 'what'")
-  ))
-}
-
-# Simulate tracks
-simul_trks <- function(anims, study_site, theta, vmin, vmax, rel_site, n_days, initHeading){
-  library(sp)
-  
-  sim <- base::replicate(n = anims, expr = {
-    
-    # Clear cache
-    gc()
-    
-    initPos <- sf::st_sample(rel_site$geometry, size=1, type ="random", exact = TRUE) %>%
-      as.data.frame() %>%
-      mutate(lon = sf::st_coordinates(geometry)[,1],
-             lat = sf::st_coordinates(geometry)[,2]) 
-    
-    stepLen <- as.numeric(sample(vmin:vmax, 1)*60*60*24/24) # Sample between minimum and maximum velocity of blacktip sharks to set step length per hour for each individual
-    
-    simu <- glatos::crw_in_polygon(study_site, 
-                           theta = theta, 
-                           stepLen = stepLen,
-                             #as.numeric(sample(vmin:vmax, 1)*60*60*24/24), # sample between min and max animal velocity in m/s * 60 seconds/min * 60 minutes/hour * 24 hours/day
-                           initPos = c(initPos$lon, initPos$lat), 
-                           nsteps = n_days*24, initHeading = initHeading) %>% 
-      sf::st_as_sf()
-    
-    return(simu)
-  }
-  )
-  
-  simu <- sim %>% as.data.frame() %>% 
-    setNames(gsub("geometry.", perl = TRUE, "", names(.))) %>%
-    setNames(gsub("geometry", perl = TRUE, "0", names(.))) %>%
-    tidyr::pivot_longer(., cols = everything(), names_to = "AnimalID", values_to = "geom") %>% 
-    mutate(ID = as.numeric(AnimalID) + 1) %>%
-    group_by(ID) %>%
-    mutate(uid = seq_along(AnimalID)) #Assign sequential numbers to rows to preserve directionality
-  
-  simu <- simu %>%  
-    mutate(POINT_X = sf::st_coordinates(geom)[,1], POINT_Y = sf::st_coordinates(geom)[,2]) %>%  #Obtain x and y coordinates so that you can force northward and southward movement
-    dplyr::select(uid, 
-                  ID, 
-                  geom, POINT_Y, POINT_X) %>%
-    group_by(ID) %>%
-    arrange(uid) %>%
-    mutate(time = seq.POSIXt(from = as.POSIXct("2000-01-01 01:00:00"), by = "1 hour", along.with = uid),   #Make up dates for the row numbers by Iteration and Animal ID
-           start_x = POINT_X, start_y = POINT_Y, end_x = lead(POINT_X), end_y = lead(POINT_Y)) %>% #Prep data for making lines - ensures proper order
-    sf::st_as_sf()
-  
-  #Make lines and unite geometries by uid's so that each line segment maintains time information
-  simu <- simu %>%
-    filter(!is.na(end_y)) %>%
-    tidyr::nest() %>% 
-    mutate(
-      data = purrr::map(data, 
-                        ~ mutate(.x,
-                                 x = purrr::pmap(.l = list(start_x, start_y, end_x, end_y),
-                                                 .f = make_line)))) 
-  
-  return(simu)
-}
-
-zero_var <- function(df) {
-  
-  # Extract zero variance variables first
-  zero_var_rows <- df %>%
-    group_by(res_name, gid) %>%
-    summarise(sd = sd(dif)) %>%
-    dplyr::filter(sd == 0) %>%
-    dplyr::select(res_name, gid) %>%
-    as.list()
-  
-  # Drop zero variance rows
-  df <- df %>%
-    group_by(res_name, gid) %>%
-    dplyr::filter(!(gid %in% zero_var_rows$gid))
-  
-  return(df)
-}
-
-powr <- function(output, sig.level, power, delta) {
-  stats::power.t.test(n = n, sd = max(na.omit(output$sd)), 
-                      sig.level = sig.level, power = power, delta = delta,
-                      type = "paired", alternative = "two.sided")
-}
-
-depth_data <- function(HSgrid) {
-  
-  alt <- sf::st_join(HSgrid, depth, join = sf::st_intersects) %>%
-    group_by(gid) %>%
-    summarise(mean_depth = mean(altitude)*-1)
-  
-  return(alt)
-}
-
-d_shore_rcvs <- function(km, study_site, land_barrier, epsg){
-  
-  grid_spacing <- km * 1000
-  
-  full_grid <- sf::st_make_grid(study_site, square = T, cellsize = c(grid_spacing, grid_spacing)) %>% # Create a grid within the bounding box of the study site
-    sf::st_as_sf() %>% # Convert to sf object
-    mutate(gid2 = seq_along(x)) # Create ID column for full grid
-
-  grid_centroids <- grid_res(km, study_site, epsg, what = "centers") %>%  # Take the centroids of the grid
-    sf::st_as_sf() %>% # Convert to sf object
-    mutate(d_shore = as.numeric(sf::st_distance(., land_barrier, by_element = FALSE))) # Find the distance to shore for each grid centroid
-  
-  # Correct coastal distances and renumber IDs
-  grid_centroids <- grid_centroids %>%
-    mutate(d_shore = if_else(sf::st_intersects(., land_barrier, sparse = F), 0, d_shore), # Grid centroids that instersect land have a shore distance of zero
-           gid2 = seq_along(x)) %>% # Set an ID column that matches the full grid
-    as.data.frame() %>%
-    dplyr::select(-x)
-  
-  grid <- merge(grid_centroids, full_grid, by = "gid2") %>% # Merge the centroids with the full grid by the shared ID column
-    sf::st_as_sf() # Convert to sf object
-  
-  grid <- sf::st_intersection(grid, study_site) %>% # Clip the grid to the study site
-    mutate(count = lengths(sf::st_intersects(., sts_pts)), # Count the number of receivers in each grid cell
-           p_a = as.factor(if_else(count > 0, 1, 0)), # Indicate whether receivers are present or not
-           gid = seq_along(gid2), # Re-number grid ID's to equal what the gid's would be if you created the grid inside the study site
-           den_rcs = (count/units::set_units(sf::st_area(x), km^2))) # Calculate density of receivers per km^2
-  
-  return(grid)
-}
-
-get_or <- function(model) {
-coefs <- as.data.frame(summary(model)$coefficients)
-row <- row.names(coefs) %in% c('(Intercept)', 'p_a1', 'mean_depth', 'den_rcs', 'd_shore')
-lower <- coefs[row,'Estimate'] - 1.96*coefs[row, 'Std. Error']
-upper <- coefs[row,'Estimate'] + 1.96*coefs[row, 'Std. Error']
-
-edf <- coefs %>%
-  tibble::rownames_to_column(var = "Effect") %>%
-  dplyr::select(Effect)
-
-or <- cbind(edf, exp(cbind(Odds_Ratio = coefs[row, 'Estimate'], low_CI_95 = lower, hi_CI_95 = upper)))
-
-return(or)
-}
-
-den_rcvs <- function(df) {
-  
-den_rcv <- df %>%
-  as.data.frame() %>%
-  dplyr::select(-x) %>%
-  dplyr::filter(den_rcs > units::set_units(0, 1/km^2)) %>%
-  summarise(dn_min = min(den_rcs),
-            dn_mean = mean(den_rcs),
-            dn_max = max(den_rcs),
-            c_min = min(count),
-            c_mean = mean(count),
-            c_max = max(count))
-
-return(den_rcv)
-}
-
-cts <- function(sg, df) {
-  
-  gid <- seq(1:max(sg$gid))  #Create a range of every grid cell
-  all <- as.data.frame(gid) 
-  
-  counts <- sf::st_join(sg, df, join = st_intersects) %>%
-    distinct(gid, ID, geometry)
-  
-  counts <- aggregate(ID ~ gid, data = counts, FUN = length) %>%
-    rename(count = ID)
-  
-  counts <- left_join(all, counts, by = "gid") %>%
-    mutate_all(~replace(., is.na(.), 0))  # Replace NA's with zeros so we can check count
-  
-  counts <- merge(counts, sg)
-  
-return(counts)
-}
-
-sub_rrt <- function(track_data, CRS, barrier, vis_graph, buffer) {
-
-# convert the track_data to sf and set the CRS; the bb step is just a way to limit
-# the size of the land polygon and save some computation time when creating vis_graph
-track_path <- track_data %>% sf::st_as_sf(coords = c("mu.x","mu.y"), crs = CRS)
-
-# there are multiple paths identified by ID; we'll group and nest for a proper
-# tidyverse/list-column workflow
-track_path <- track_path %>%
-  group_by(ID) %>%
-  arrange(ID, time) %>%
-  tidyr::nest()
-
-# we need to get our land polygon into a proper format; essentially, we want it to be
-# a series of POLYGONs (and not MULTIPOLYGONs or GEOMETRYCOLLECTION).
-land_barrier <- barrier  %>%
-  sf::st_transform(CRS) %>%
-  sf::st_collection_extract('POLYGON') %>%
-  sf::st_cast('POLYGON')
-
-# prt_visgraph will build our visual graph network from our land barrier object and
-# return a SpatialLinesNetwork / sfNetwork that has no edges that cross land
-# vis_graph <- pathroutr::prt_visgraph(land_barrier)
-
-# the track cannot start or end within the land barrier; prt_trim() trims those out
-track_path <- track_path %>%
-  rowwise() %>%
-  mutate(trim_data = list(pathroutr::prt_trim(data, land_barrier)))
-
-# here, we create our re-routed points; the return is a two column data frame with the
-# index location in the original point data and the new geometry. The user can handle
-# updating of those original point data or pass the result on to prt_update_points()
-t <- track_path %>% dplyr::rowwise() %>%
-  mutate(rrt_pts = list(prt_reroute(trim_data, land_barrier, vis_graph)))
-
-# NOTE: previous versions of prt_update_points() had the argument order reversed from
-# what it now requires. The updated geometry points are passed first (here, `rrt_pts`)
-# and, then, the original data to be updated. This order should allow for easy piping
-# from prt_reroute()
-t <- t %>% dplyr::rowwise() %>%                                                      
-  mutate(path_pts = list(prt_update_points(rrt_pts, trim_data)),
-         path_lines = list(path_pts %>% summarise(do_union = FALSE) %>% sf::st_cast('LINESTRING')))  # do_union MUST be FALSE!
-
-# we need to rbind all of our lines and points into single objects that can be plotted
-t$geom <- do.call(rbind, t$path_lines)
-t$geom <- sf::st_set_crs(t$geom, CRS)
-
-t <- t %>% dplyr::select(ID, geom) 
-
-#Convert from rowwise_df to sf object
-t <- t %>%
-  rowwise() %>%
-  mutate(geom = sf::st_geometry(geom)) %>%
-  dplyr::select(ID, geom) %>%
-  ungroup() %>%
-  sf::st_as_sf(., sf_column_name = "geom")
-
-# Buffer re-routed tracks
-tbuff <- t %>%
-  sf::st_buffer(., buffer, endCapStyle = "ROUND", joinStyle = "ROUND")
-
-return(tbuff)
-}
-
-```
-
 ## Get the objects required for simulating tracks
 
 Get the study site and set the projected coordinate system.
@@ -497,7 +208,7 @@ Let's create an output file where our results will go. We only want to create th
 # df <- list()
 
 # Assign the filename
-filename <- "results_fixed-5.Rdata"
+filename <- "results_final.Rdata"
 
 # Save the empty list object to the filename
 # save(df, file = filename)
